ui design fully changed

--- a/app/src/main/res/layout/activity_splah_screen.xml
+++ b/app/src/main/res/layout/activity_splah_screen.xml
@@ -23,7 +23,7 @@
         android:id="@+id/blueTwitter"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/apps_icon"
+        android:src="@drawable/splash_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/WhiteTwitter"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/apps_icon"
+        android:src="@drawable/splash_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
