--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,15 +5,12 @@
     <color name="cream">#EDC6BA</color>
 
     <color name="purple_200">#1B5363</color>
-    <color name="purple_500">#FA855A</color>
-    <color name="purple_700">#E46F44</color>
-    <color name="teal_200">#eeebdd</color>
-    <color name="teal_700">#F0F1F1</color>
+    <color name="purple_500">#2196F3</color>
+    <color name="purple_700">#2196F3</color>
+    <color name="teal_200">#2196F3</color>
+    <color name="teal_700">#2196F3</color>
 
 
     <color name="atomic_steel_blue">#F0F1F1</color>
     <color name="seagull_blue">#769ABE</color>
-    <color name="pink_shell">#E8AA9B</color>
-    <color name="plum_violet">#DCD5DC</color>
-
 </resources>
