--- a/app/src/main/res/layout/contact_bottomsheet_layout.xml
+++ b/app/src/main/res/layout/contact_bottomsheet_layout.xml
@@ -41,10 +41,10 @@
                         android:textStyle="bold" />
 
                     <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/apps_icon" />
+                        android:src="@drawable/splash_icon" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -68,7 +68,6 @@
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
-
                     <TextView
                         android:id="@+id/email"
                         android:layout_width="match_parent"
@@ -78,7 +77,7 @@
                         android:autoLink="email"
                         android:fontFamily="@font/trebuc"
                         android:gravity="center"
-                        android:text="📧 medicarepro@gmail.com"
+                        android:text="📧 zobayer.dev@gmail.com"
                         android:textColor="@color/black"
                         android:textIsSelectable="true"
                         android:textSize="15sp"
