--- a/app/src/main/res/layout/header_menu.xml
+++ b/app/src/main/res/layout/header_menu.xml
@@ -5,11 +5,10 @@
     android:orientation="vertical">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/apps_icon" />
+        android:src="@drawable/splash_icon" />
 
 </LinearLayout>
