--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,7 @@
             android:layout_height="130dp"
             android:layout_margin="10dp"
             app:cardCornerRadius="5dp"
+            android:backgroundTint="#FFFFFF"
             app:cardElevation="3dp">
 
             <LinearLayout
