--- a/app/src/main/res/layout/activity_bangladesh.xml
+++ b/app/src/main/res/layout/activity_bangladesh.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BangladeshActivity">
+    tools:context=".activities.BangladeshActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
