--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+    tools:context=".fragments.HomeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,8 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:layout_margin="10dp"
-            app:cardCornerRadius="5dp"
             android:backgroundTint="#FFFFFF"
+            app:cardCornerRadius="5dp"
             app:cardElevation="3dp">
 
             <LinearLayout
@@ -57,8 +57,8 @@
                         android:layout_marginStart="5dp"
                         android:fontFamily="@font/kalpurush"
                         android:text="Trip Tour Guide এর সাথে"
-                        android:textSize="16sp"
                         android:textColor="@color/black"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -112,8 +112,8 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/zilla_slab_regular"
                         android:text="Dhaka"
-                        android:textStyle="bold"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -149,8 +149,8 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/zilla_slab_regular"
                         android:text="Rajshahi"
-                        android:textStyle="bold"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -186,8 +186,8 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/zilla_slab_regular"
                         android:text="Sylhet"
-                        android:textStyle="bold"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -259,8 +259,8 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/zilla_slab_regular"
                         android:text="Khulna"
-                        android:textStyle="bold"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -296,8 +296,8 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/zilla_slab_regular"
                         android:text="Barishal"
-                        android:textStyle="bold"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
