--- a/app/src/main/res/layout/contact_bottomsheet_layout.xml
+++ b/app/src/main/res/layout/contact_bottomsheet_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -52,7 +53,7 @@
                         android:layout_gravity="center"
                         android:layout_margin="10dp"
                         android:fontFamily="@font/trebuc"
-                        android:text="This app is developed by Trodev."
+                        android:text="This app is developed by Trodev"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
