--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -386,8 +386,7 @@
             <!--dhaka division-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/dhakaCv"
@@ -419,18 +418,18 @@
                             android:background="#00000000"
                             android:fontFamily="@font/mulish_semibold"
                             android:padding="10dp"
-                            android:textSize="15sp"
                             android:text="View Division"
                             android:textAllCaps="false"
+                            android:textSize="15sp"
                             android:textStyle="bold" />
 
                         <ImageView
                             android:layout_width="70dp"
                             android:layout_height="120dp"
                             android:layout_marginStart="320dp"
-                            android:layout_marginBottom="80dp"
                             android:layout_marginTop="-5dp"
                             android:layout_marginRight="2dp"
+                            android:layout_marginBottom="80dp"
                             android:src="@drawable/splash_icon" />
 
                     </RelativeLayout>
@@ -442,8 +441,7 @@
             <!--Rajshahi division-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -475,18 +473,18 @@
                             android:background="#00000000"
                             android:fontFamily="@font/mulish_semibold"
                             android:padding="10dp"
-                            android:textSize="15sp"
                             android:text="View Division"
                             android:textAllCaps="false"
+                            android:textSize="15sp"
                             android:textStyle="bold" />
 
                         <ImageView
                             android:layout_width="70dp"
                             android:layout_height="120dp"
                             android:layout_marginStart="320dp"
-                            android:layout_marginBottom="80dp"
                             android:layout_marginTop="-5dp"
                             android:layout_marginRight="2dp"
+                            android:layout_marginBottom="80dp"
                             android:src="@drawable/splash_icon" />
 
                     </RelativeLayout>
@@ -498,8 +496,7 @@
             <!--dhaka division-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -530,18 +527,18 @@
                             android:background="#00000000"
                             android:fontFamily="@font/mulish_semibold"
                             android:padding="10dp"
-                            android:textSize="15sp"
                             android:text="View Division"
                             android:textAllCaps="false"
+                            android:textSize="15sp"
                             android:textStyle="bold" />
 
                         <ImageView
                             android:layout_width="70dp"
                             android:layout_height="120dp"
                             android:layout_marginStart="320dp"
-                            android:layout_marginBottom="80dp"
                             android:layout_marginTop="-5dp"
                             android:layout_marginRight="2dp"
+                            android:layout_marginBottom="80dp"
                             android:src="@drawable/splash_icon" />
 
                     </RelativeLayout>
@@ -553,8 +550,7 @@
             <!--Rajshahi division-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -586,18 +582,18 @@
                             android:background="#00000000"
                             android:fontFamily="@font/mulish_semibold"
                             android:padding="10dp"
-                            android:textSize="15sp"
                             android:text="View Division"
                             android:textAllCaps="false"
+                            android:textSize="15sp"
                             android:textStyle="bold" />
 
                         <ImageView
                             android:layout_width="70dp"
                             android:layout_height="120dp"
                             android:layout_marginStart="320dp"
-                            android:layout_marginBottom="80dp"
                             android:layout_marginTop="-5dp"
                             android:layout_marginRight="2dp"
+                            android:layout_marginBottom="80dp"
                             android:src="@drawable/splash_icon" />
 
                     </RelativeLayout>
@@ -609,8 +605,7 @@
             <!--dhaka division-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -641,18 +636,18 @@
                             android:background="#00000000"
                             android:fontFamily="@font/mulish_semibold"
                             android:padding="10dp"
-                            android:textSize="15sp"
                             android:text="View Division"
                             android:textAllCaps="false"
+                            android:textSize="15sp"
                             android:textStyle="bold" />
 
                         <ImageView
                             android:layout_width="70dp"
                             android:layout_height="120dp"
                             android:layout_marginStart="320dp"
-                            android:layout_marginBottom="80dp"
                             android:layout_marginTop="-5dp"
                             android:layout_marginRight="2dp"
+                            android:layout_marginBottom="80dp"
                             android:src="@drawable/splash_icon" />
 
                     </RelativeLayout>
@@ -664,8 +659,7 @@
             <!--Rajshahi division-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -697,18 +691,18 @@
                             android:background="#00000000"
                             android:fontFamily="@font/mulish_semibold"
                             android:padding="10dp"
-                            android:textSize="15sp"
                             android:text="View Division"
                             android:textAllCaps="false"
+                            android:textSize="15sp"
                             android:textStyle="bold" />
 
                         <ImageView
                             android:layout_width="70dp"
                             android:layout_height="120dp"
                             android:layout_marginStart="320dp"
-                            android:layout_marginBottom="80dp"
                             android:layout_marginTop="-5dp"
                             android:layout_marginRight="2dp"
+                            android:layout_marginBottom="80dp"
                             android:src="@drawable/splash_icon" />
 
                     </RelativeLayout>
