--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/menu_ticket_manager"
+        android:icon="@drawable/ic_tickets"
+        android:title="Ticket Manager" />
 
     <item
         android:id="@+id/menu_developer"
