weather fully complete

--- a/app/src/main/res/drawable/button_design.xml
+++ b/app/src/main/res/drawable/button_design.xml
@@ -4,6 +4,6 @@
 
     <corners android:radius="10dp"/>
 
-    <solid android:color="#ffa384"/>
+    <solid android:color="@color/app_color"/>
 
 </shape>
