--- a/app/src/main/res/layout/contact_bottomsheet_layout.xml
+++ b/app/src/main/res/layout/contact_bottomsheet_layout.xml
@@ -99,6 +99,20 @@
                         android:textSize="15sp"
                         android:textStyle="bold" />
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:autoLink="email"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:gravity="center"
+                        android:text="Copyright © 2021-2023 Trodev, all right reserved."
+                        android:textColor="@color/black"
+                        android:textIsSelectable="true"
+                        android:textSize="12sp"
+                        android:layout_marginBottom="10dp"
+                        android:textStyle="bold" />
+
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
