--- a/app/src/main/res/layout/header_menu.xml
+++ b/app/src/main/res/layout/header_menu.xml
@@ -5,10 +5,10 @@
     android:orientation="vertical">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/splash_icon" />
+        android:layout_marginTop="40dp"
+        android:src="@drawable/app_icon_two" />
 
 </LinearLayout>
