--- a/app/src/main/res/layout/activity_ticket_manager.xml
+++ b/app/src/main/res/layout/activity_ticket_manager.xml
@@ -5,8 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.TicketManagerActivity">
+    tools:context=".TicketManagerActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recordRv"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/row_record"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+
+        />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addRecord"
