--- a/app/src/main/res/layout/activity_ticket_manager.xml
+++ b/app/src/main/res/layout/activity_ticket_manager.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TicketManagerActivity">
+    tools:context=".activities.TicketManagerActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recordRv"
