full apps updated

--- a/app/src/main/res/layout/contact_bottomsheet_layout.xml
+++ b/app/src/main/res/layout/contact_bottomsheet_layout.xml
@@ -41,11 +41,16 @@
                         android:textSize="23sp"
                         android:textStyle="bold" />
 
-                    <ImageView
-                        android:layout_width="120dp"
+                    <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/animationView"
+                        android:layout_width="200dp"
                         android:layout_height="120dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/splash_icon" />
+                        app:lottie_autoPlay="true"
+                        app:lottie_loop="true"
+                        app:lottie_rawRes="@raw/developer_lottie" />
+
+
 
                     <TextView
                         android:layout_width="wrap_content"
