--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="purple_700">#2196F3</color>
     <color name="teal_200">#2196F3</color>
     <color name="teal_700">#2196F3</color>
+    <color name="lottie_button">#ff8e3a</color>
 
     <color name="app_color">#2196F3</color>
 
